Refactor PlayerListener to handle item pickup events for players
- Updated the onPlayerPickupItem method to use EntityPickupItemEvent instead of PlayerPickupItemEvent for better event handling.
- Adjusted the event cancellation logic to check if the entity is a player, enhancing the event's specificity.
- Cleaned up imports in PlayerListener and PlayerListenerTest to reflect the changes made.