@@ -45,7 +45,7 @@ public class DebugSectionConsistencyTest {
     }
 
     @Test
-    public void shouldHaveDifferentSubcommandName() throws IllegalAccessException, InstantiationException {
+    public void shouldHaveDifferentSubcommandName() {
         Set<String> names = new HashSet<>();
         for (DebugSection debugSection : debugSections) {
             if (!names.add(debugSection.getName())) {
@@ -64,8 +64,8 @@ public class DebugSectionConsistencyTest {
 
     private static DebugSection instantiate(Class<? extends DebugSection> clazz) {
         try {
-            return ClassCollector.canInstantiate(clazz) ? clazz.newInstance() : null;
-        } catch (InstantiationException | IllegalAccessException e) {
+            return ClassCollector.canInstantiate(clazz) ? clazz.getDeclaredConstructor().newInstance() : null;
+        } catch (ReflectiveOperationException e) {
             throw new IllegalStateException(e);
         }
     }
